# MistFarm_Embedded

./: .gitignore  .project  README.md  tool_set_config.json
MistFarm_FW_code/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
MistFarm_FW_code/components/: GPS.h  Sensor.h  common.h  config.h  global.h
MistFarm_FW_code/components/cjson/: .cproject  .project
MistFarm_FW_code/components/common/: .cproject  CMakeLists.txt  common.c
MistFarm_FW_code/components/common/include/mistfarm/: config.h  global.h
MistFarm_FW_code/components/gps/: .cproject  .project  CMakeLists.txt  GPS.c  GPS.h
MistFarm_FW_code/components/sensor/: .cproject  CMakeLists.txt  Sensor.c  Sensor.h
MistFarm_FW_code/components/swiching/: Switching.c  Switching.h
MistFarm_FW_code/components/switching/: .cproject  .project  CMakeLists.txt  (+1 more)
MistFarm_FW_code/main/: .cproject  CMakeLists.txt  main.c
MistFarm_PCB/MistFarm_PCB/: 3.3V.kicad_sch  ESP32-CAM.kicad_sch  ESP32.kicad_sch  MistFarm_PCB-B_Cu.gbr  MistFarm_PCB-B_Mask.gbr  MistFarm_PCB-B_Paste.gbr  MistFarm_PCB-B_Silkscreen.gbr  MistFarm_PCB-Edge_Cuts.gbr  MistFarm_PCB-F_Cu.gbr  MistFarm_PCB-F_Mask.gbr  MistFarm_PCB-F_Paste.gbr  MistFarm_PCB-F_Silkscreen.gbr  MistFarm_PCB-In1_Cu.gbr  MistFarm_PCB-In2_Cu.gbr  MistFarm_PCB-NPTH.drl  MistFarm_PCB-PTH.drl  MistFarm_PCB-job.gbrjob  MistFarm_PCB.csv  MistFarm_PCB.kicad_pcb  MistFarm_PCB.kicad_prl  MistFarm_PCB.kicad_pro  MistFarm_PCB.kicad_sch  Sensor.kicad_sch  TRIAC.kicad_sch  _autosave-ESP32-CAM.kicad_sch  fp-info-cache  untitled.kicad_sch
MistFarm_code/main/: main.ino
(+14 files in other folders)
